--- a/server-side/package.json
+++ b/server-side/package.json
@@ -1,15 +1,11 @@
 {
   "name": "server-side",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "start": "node index.js",  
+    "server": "nodemon index.js",  
+    "vercel-build": "echo 'No build for backend, just serve'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
