--- a/server-side/package.json
+++ b/server-side/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server-side",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",  
-    "server": "nodemon index.js",  
-    "vercel-build": "echo 'No build for backend, just serve'"
+    "dev": "nodemon index.js"  
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
