--- a/server-side/vercel.json
+++ b/server-side/vercel.json
@@ -8,9 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/index.js"
+        "src": "/(.*)",
+        "dest": "index.js"
       }
     ]
   }
-  
